2026-01-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* om.tmac (PAD, TO_TOC, PDF_LINK): Simplify `pdfhref` calls.
	Arrange mandatory arguments before optional ones, and stop using
	nilpotent `-E` argument.  Thanks to Peter Schaffter and Deri
	James for the review.

2025-12-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am (EXTRA_DIST): Ship "COPYRIGHT" file in distribution
	archive.

2025-10-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am (MOMPDFMOM): Add environment variable `GROFF_COMMAND`,
	newly recognized by pdfmom(1), to make it run the build tree's
	groff via "test-groff", rather than (potentially) a "groff" in
	the build environment's $PATH.
	($(MOMPROCESSEDEXAMPLEFILES)): Add dependency on "test-groff"
	script, now required to generate the targets stored in this
	macro.

2025-07-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am (MOMPDFMOM): Append `-P -W` to `pdfmom` arguments.

	Continues fixing Savannah #67268.

2025-02-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am: Stop specifying `PDFMOM_BIN_PATH` environment
	variable in `MOMPDFMOM` macro housing shell command.  Nothing
	checks the environment for this variable, and according to `git
	log -p` history going all the way back to 2012 when pdfmom(1)
	landed, nothing ever has.

2024-10-15

	* om.tmac: [PDF_IMAGE]: remove superfluous \!

2024-10-13

	* om.tmac:
	+ Corrects PDF_IMAGE after only one line of text at the top of
	documents placing the image on the next page.
	+ Correct graphical objects' color handling and placement

	* BUGS: Update

	Fixes <https://savannah.gnu.org/bugs/?66332>.  Thanks to наб for
	the report.

2024-10-13

	* om.tmac: Add linked endnotes; fix graphical objects; tweaks
	+ adds internally linked endnotes
	+ fixes graphical objects clobbering bottom of footer trap
	  - move restoration of traps to the bottom of affected macros
	+ resets $QUAD_VALUE before exiting ENDNOTE