@@ -1,4 +1,4 @@
-    Copyright 2022-2025 G. Branden Robinson
+    Copyright 2022-2024 G. Branden Robinson
 
     Copying and distribution of this file, with or without
     modification, are permitted in any medium without royalty provided
