@@ -99,10 +99,8 @@ MOMPROCESSEDEXAMPLEFILES = \
   contrib/mom/examples/sample_docs.pdf \
   contrib/mom/examples/slide-demo.pdf \
   contrib/mom/examples/copyright-default.pdf \
-  contrib/mom/examples/copyright-chapter.pdf
-if HAVE_URW_FONTS
-MOMPROCESSEDEXAMPLEFILES += contrib/mom/examples/typesetting.pdf
-endif
+  contrib/mom/examples/copyright-chapter.pdf \
+  contrib/mom/examples/typesetting.pdf
 momprocessedexampledir = $(exampledir)/mom
 nodist_momprocessedexample_DATA = $(MOMPROCESSEDEXAMPLEFILES)
 endif
