@@ -11,10 +11,6 @@
 /CBI
 /CI
 /CR
-/CSH
-/CSS
-/CTH
-/CTS
 /DESC
 /EURO
 /Foundry
@@ -26,10 +22,6 @@
 /HNI
 /HNR
 /HR
-/JPG
-/JPM
-/KOG
-/KOM
 /NB
 /NBI
 /NI
